GB-62: Update openapi
