# api/openapi.yaml
@@ -11,8 +11,10 @@ externalDocs:
   description: Learn more about GameBase
   url: https://gahr.dev
 servers:
-- description: SwaggerHub API Auto Mocking
-  url: https://virtserver.swaggerhub.com/humenius/GameBase-Comm-API/1.0.0
+- description: Dev Backend version of REST service
+  url: https://backend.dev.gahr.dev/
+- description: Live Backend version of REST service
+  url: https://backend.gamebase.gahr.dev/
 tags:
 - description: REST API v1
   name: api
@@ -225,6 +227,29 @@ paths:
       summary: Delete deployment of game server
       tags:
       - api
+  /api/listimages:
+    get:
+      operationId: listImages
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/GameServerImages'
+                type: array
+          description: Query successful
+        503:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Exception'
+                type: array
+          description: Query failed
+      summary: Get a list of all available game server images
+      tags:
+      - api
 components:
   requestBodies:
     GameServerDeployTemplate:
@@ -338,3 +363,15 @@ components:
       anyOf:
       - $ref: '#/components/schemas/GameServerStatus'
       - type: object
+    GameServerImages:
+      example:
+        images:
+        - images
+        - images
+      properties:
+        images:
+          description: List of images
+          items:
+            type: string
+          type: array
+      type: object
