# openapi/model_game_server_images.go
@@ -1,0 +1,17 @@
+/*
+ * GameBase Communication API
+ *
+ * This is the REST API used as an communication layer between backend and frontend.
+ *
+ * API version: 1.0.0
+ * Contact: gamebase@gahr.dev
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type GameServerImages struct {
+
+	// List of images
+	Images []string `json:"images,omitempty"`
+}
